add Feature flex

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <script src="https://kit.fontawesome.com/3b46164a99.js"   crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="img/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,11 +30,11 @@
   </div>
     <div class="portfolio">
       <div class="portfolio_inner">
-        <div class="portfolio_title">
+        <div class="title">
           Portfolio
-          <div class="portfolio_border"></div>
+          <div class="border"></div>
         </div>
-          <div class="portfolio_text">
+          <div class="text">
             It is a long established fact that a reader will be distracted by the readable<br>
             content of a page when looking at its layout.<br>
             The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
@@ -50,25 +51,32 @@
     </div>
   <div class="feature">
     <div class="feature-inner">
-      <div class="feature-title">
+      <div class="title">
         Feature
-        <div class="feature-boder"></div>
+        <div class="border"></div>
       </div>
-      <div class="feature-text">
+      <div class="text">
         It is a long established fact that a reader will be distracted by the readable<br>
         content of a page when looking at its layout.<br>
         The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
       </div>
       <div class="feature-content-list">
         <div class="content1">
+          <div class="icon"><i class="fas fa-code"></i></div>
           <div class="content-title">Strength1</div>
           <div class="content-text">Contrary to popular belief, Lorem Ipsum
             is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</div>
         </div>
         <div class="content2">
+          <div class="icon"><i class="fas fa-desktop"></i></div>
           <div class="content-title">Strength2</div>
-        </div>  
-        <div class="content3">Strength3</div>
+          <div class="content-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</div>
+        </div>
+        <div class="content3">
+          <div class="icon"><i class="fas fa-cogs"></i></div>
+          <div class="content-title">Strength3</div>
+          <div class="content-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</div>
+        </div>
       </div>
     </div>
   </div>
@@ -77,7 +85,7 @@
 
 
     <footer></footer>
-</body> 
+</body>
 
 
 </html>
