--- a/index.html
+++ b/index.html
@@ -80,7 +80,36 @@
       </div>
     </div>
   </div>
-  <div class="prifile"></div>
+  <div class="profile">
+    <div class="profile-inner">
+      <div class="title">
+        Profile
+      <div class="border"></div>
+      </div>
+      <div class="text">
+        It is a long established fact that a reader will be distracted by the readable<br>
+        content of a page when looking at its layout.<br>
+        The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
+      </div>
+      <div class="profile_content">
+          <div class="profile_content_left">
+            <img class="profile_image" src="img/my-icon.jpg">
+          </div>
+          <div class="profile_content_right">
+            <div class="profile_title">MyName</div>
+              <div class="profile_text">
+                Contrary to popular belief, Lorem Ipsum is not simply random
+                text. It has roots in a piece of classical Latin literature from 45
+                BC, making it over 2000 years old. Richard McClintock, a Latin
+                professor at Hampden-Sydney College in Virginia, looked up
+                one of the more obscure Latin words, consectetur
+              </div>
+            <div class="profile_title">Myskills</div>
+            <div class="profile_text">HTML/CSS,JavaScript,JQuery,PhotoShop</div>
+          </div>
+        </div>
+      </div>
+    </div>
   <div class="contact"></div>
 
 
