--- a/index.html
+++ b/index.html
@@ -123,23 +123,25 @@
       </div>
       <div class="contact_form">
         <div class="contact_form_left">
-          <div class="contact_title">Mail</div>
-          <div class="contact_string"><a href="mailto:info@example.com">xxx@xxx.com</a></div>
-          <div class="contact_title">Tel</div>
-          <div class="contact_string"><a href="tel:">000-0000-0000</a></div>
+          <div class="contact_contents">
+            <div class="contact_title">Mail</div>
+            <div class="contact_string"><a href="mailto:info@example.com">xxx@xxx.com</a></div>
+            <div class="contact_title">Tel</div>
+            <div class="contact_string"><a href="tel:">000-0000-0000</a></div>
+          </div>
         </div>
         <div class="contact_form_right">
-          <div class="contact_title">SNS</div>
-            <div class="contact_icon_group">
-                <div class="contact_icon"><i class="fab fa-facebook-f"></i></div>
-                <div class="contact_icon"><i class="fab fa-twitter"></i></div>
-                <div class="contact_icon"><i class="fab fa-instagram"></i></div>
+          <div class="contact_contents">
+            <div class="contact_title">SNS</div>
+              <div class="contact_icon_group">
+                  <div class="contact_icon"><i class="fab fa-facebook-f"></i></div>
+                  <div class="contact_icon"><i class="fab fa-twitter"></i></div>
+                  <div class="contact_icon"><i class="fab fa-instagram"></i></div>
+              </div>
             </div>
         </div>
       </div>
-
     </div>
-
   </div>
 
 
