fix icon position

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           </div>
         </div>
         <div class="contact_form_right">
-          <div class="contact_contents">
+          <div class="contact_contents2">
             <div class="contact_title">SNS</div>
               <div class="contact_icon_group">
                   <div class="contact_icon"><i class="fab fa-facebook-f"></i></div>
